renamed main file to angular-routing.js

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-routing",
   "version": "0.0.1",
-  "main": "routing.js",
+  "main": "angular-routing.js",
   "ignore": [
     "**/.*",
     "node_modules",
