--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-routing",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "angular-routing.js",
   "ignore": [
     "**/.*",
@@ -8,6 +8,7 @@
     "components"
   ],
   "dependencies": {
-    "angular": "~1.x"
+    "angular": "~1.2.x",
+    "angular-route": "~1.2.x"
   }
 }
